Adjust spacing between elements according to bug description

--- a/src/client/components/belteditor/CreateBelt.css
+++ b/src/client/components/belteditor/CreateBelt.css
@@ -11,6 +11,7 @@
     padding-right: 0;
     max-width: 672px;
     margin-top: 1em;
+    margin-bottom: 1.5em;
 }
 
 .CreateBelt label.Input__label {
@@ -20,6 +21,10 @@
 
 .CreateBelt .Button {
     font-size: inherit;
+}
+
+.CreateBelt .Toolbar {
+    margin-top: 2em;
 }
 
 .CreateBelt .Toolbar__center {
